# url-shorter

./: .env  Cargo.toml
migrations/2024-01-07-090613_create_urls/: up.sql
src/: lib.rs  models.rs  schema.rs
