[package]
name = "url-shorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
actix-web = "4.4.1"
serde = {version = "1.0.195", features = ["derive"]}
rand = "0.8.5"